fix: css overflow on small

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
-a.logo {
-  display: flex;
-  gap: 2px;
-  align-items: center;
-  font-size: 1.3rem;
-}
 h1.header {
   font-size: 1.5rem;
   display: flex;
